--- a/main.html
+++ b/main.html
@@ -3,11 +3,20 @@
 <html>
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+
+	<link rel="stylesheet" href="stylee.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+   <h1>What is the capital of India?</h1>
+  <h2><input type="radio">New Delhi</h2>
+	<h2><input type="radio">Mumbai</h2>
+   <h3>
+    <blockquote cite="https://en.wikipedia.org/wiki/New_Delhi">New Delhi is the capital of India and an administrative district of NCT Delhi.</blockquote>
+   </h3>
+
+
     <script type="text/javascript" src="./script.js">
 </script>
 
